--- a/src/app/cdk-virtual-scroll-append-only-example.css
+++ b/src/app/cdk-virtual-scroll-append-only-example.css
@@ -1,7 +1,37 @@
+/* body{
+  width: 100%;
+  height: 100%;
+
+} */
+
+.example-viewport-wrapper {
+  
+  display: flex;
+  flex: 1 1 100%;
+  padding: 5px;
+  padding-right: 0px;
+  justify-content: stretch;
+  align-items: stretch;
+  align-self: stretch;
+  
+
+  border: 1px solid rgb(150, 148, 148);
+  border-radius: 7px;
+  overflow: hidden;
+}
+
 .example-viewport {
-  height: 200px;
-  width: 200px;
-  border: 1px solid black;
+  
+  display: flex;
+  flex: 1 1 100%;
+  /*
+  flex: 1 1 100%;
+  padding: 5px;
+  */
+  
+  height: 500px;
+  /* width: 200px; */
+  
 }
 
 .example-item {
